--- a/pagina_de_productos.html
+++ b/pagina_de_productos.html
@@ -14,7 +14,7 @@
                     <img src="assets/img/ring.gif" alt="Ring" class="cabecera__logo">
                     <h1>Web-Sonic.com</h1>
                     <label for="boton-modo-oscuro" class="cabecera__modo-oscuro">Modo oscuro</label>
-                    <input type="checkbox" id="boton-modo-oscuro" class="cabecera__boton-modo-oscuro" onclick="activarModoOscuro()">
+                    <input type="checkbox" id="boton-modo-oscuro" class="cabecera__boton-modo-oscuro">
                 </article>
                 <nav class="cabecera__navegador">
                     <input type="checkbox" id="casilla-menu" class="cabecera__casilla-menu">
@@ -34,42 +34,52 @@
             </header>
             <main class="cuerpo2">
                 <h2 class="cuerpo2__titulo">PAGINA DE PRODUCTOS</h2>
-                <section class="cuerpo2__productos">
-                    <article class="cuerpo2__producto">
+                <article class="cuerpo2__filtros">
+                    <label for="filtro1" class="cuerpo2__filtro">Mostrar por encima los elementos por defecto con posición par</label>
+                    <input type="checkbox" name="filtro1" placeholder="filtro1" class="cuerpo2__checkbox-de-filtro" id="filtro1">
+                    <label for="filtro2" class="cuerpo2__filtro">Mostrar por encima los elementos por defecto con posición impar</label>
+                    <input type="checkbox" name="filtro1" placeholder="filtro1" class="cuerpo2__checkbox-de-filtro" id="filtro2">
+                    <label for="filtro3" class="cuerpo2__filtro">Mostrar por orden de lanzamiento</label>
+                    <input type="checkbox" name="filtro1" placeholder="filtro1" class="cuerpo2__checkbox-de-filtro" id="filtro3">
+                    <label for="filtro4" class="cuerpo2__filtro">Restaurar orden por defecto</label>
+                    <input type="checkbox" name="filtro1" placeholder="filtro1" class="cuerpo2__checkbox-de-filtro" id="filtro4">
+                </article>
+                <section class="cuerpo2__productos" id="caja-productos1">
+                    <article class="cuerpo2__producto" id="producto-1">
                         <a href="assets/img/sonic_frontiers.jpg" class="cuerpo2__imagen-producto"><img src="assets/img/sonic_frontiers.jpg" alt="Sonic Frontiers" class="cuerpo2__imagen"></a>
                         <h3><a href="./sonic_frontiers.html" class="cuerpo2__nombre-boton">Sonic frontiers</a></h3>
                     </article>
-                    <article class="cuerpo2__producto">
+                    <article class="cuerpo2__producto" id="producto-2">
                         <a href="assets/img/sonic_x_shadow_generations.jpg" class="cuerpo2__imagen-producto"><img src="assets/img/sonic_x_shadow_generations.jpg" alt="Sonic X Shadow Generations" class="cuerpo2__imagen"></a>
                         <h3><a href="./sonic_x_shadow_generations.html" class="cuerpo2__nombre-boton">Sonic y Shadow generations</a></h3>
                     </article>
                 </section>
-                <section class="cuerpo2__productos">
-                    <article class="cuerpo2__producto">
+                <section class="cuerpo2__productos"  id="caja-productos2">
+                    <article class="cuerpo2__producto" id="producto-3">
                         <a href="assets/img/sonic_colors.jpg" class="cuerpo2__imagen-producto"><img src="assets/img/sonic_colors.jpg" alt="Sonic Colors" class="cuerpo2__imagen"></a>
                         <h3><a href="./sonic_colors.html" class="cuerpo2__nombre-boton">Sonic colors</a></h3>
                     </article>
-                    <article class="cuerpo2__producto">
+                    <article class="cuerpo2__producto" id="producto-4">
                         <a href="assets/img/sonic_lost_world.jpg" class="cuerpo2__imagen-producto"><img src="assets/img/sonic_lost_world.jpg" alt="Sonic Lost World" class="cuerpo2__imagen"></a>
                         <h3><a href="./sonic_lost_world.html" class="cuerpo2__nombre-boton">Sonic lost world</a></h3>
                     </article>
                 </section>
-                <section class="cuerpo2__productos">
-                    <article class="cuerpo2__producto">
+                <section class="cuerpo2__productos" id="caja-productos3">
+                    <article class="cuerpo2__producto" id="producto-5">
                         <a href="assets/img/sonic_unleashed.jpg" class="cuerpo2__imagen-producto"><img src="assets/img/sonic_unleashed.jpg" alt="Sonic Unleashed" class="cuerpo2__imagen"></a>
                         <h3><a href="./sonic_unleashed.html" class="cuerpo2__nombre-boton">Sonic unleashed</a></h3>
                     </article>
-                    <article class="cuerpo2__producto">
+                    <article class="cuerpo2__producto" id="producto-6">
                         <a href="assets/img/sonic_mania.png" class="cuerpo2__imagen-producto"><img src="assets/img/sonic_mania.png" alt="Sonic Mania" class="cuerpo2__imagen"></a>
                         <h3><a href="./sonic_mania.html" class="cuerpo2__nombre-boton">Sonic mania</a></h3>
                     </article>
                 </section>
-                <section class="cuerpo2__productos">
-                    <article class="cuerpo2__producto">
+                <section class="cuerpo2__productos" id="caja-productos4">
+                    <article class="cuerpo2__producto" id="producto-7">
                         <a href="assets/img/sonic_superstars.jpg" class="cuerpo2__imagen-producto"><img src="assets/img/sonic_superstars.jpg" alt="Sonic Superstars" class="cuerpo2__imagen"></a>
                         <h3><a href="./sonic_superstars.html" class="cuerpo2__nombre-boton">Sonic superstars</a></h3>
                     </article>
-                    <article class="cuerpo2__producto">
+                    <article class="cuerpo2__producto" id="producto-8">
                         <a href="assets/img/sonic_forces.jpg" class="cuerpo2__imagen-producto"><img src="assets/img/sonic_forces.jpg" alt="Sonic Forces" class="cuerpo2__imagen"></a>
                         <h3><a href="./sonic_forces.html" class="cuerpo2__nombre-boton">Sonic forces</a></h3>
                     </article>
@@ -77,9 +87,11 @@
             </main>
             <footer class="pie">
                 <h4>Pagina web realizada por Cesar Gabriel Ucha Sousa (alias: ricitos2001)
-                    <img src="./assets/img/copyright.png" alt="Logo" id="pie__copyright" class="pie__copyright">
+                    <img src="./assets/img/copyright_black.png" alt="Logo" id="pie__copyright" class="pie__copyright">
                 </h4>
             </footer>
         </body>
         <script src="js/index.js"></script>
+        <script src="js/modo_oscuro.js"></script>
+        <script src="js/filtros.js"></script>
     </html>
