--- a/sonic_colors.html
+++ b/sonic_colors.html
@@ -14,7 +14,7 @@
                     <img src="assets/img/ring.gif" alt="Ring" class="cabecera__logo">
                     <h1>Web-Sonic.com</h1>
                     <label for="boton-modo-oscuro" class="cabecera__modo-oscuro">Modo oscuro</label>
-                    <input type="checkbox" id="boton-modo-oscuro" class="cabecera__boton-modo-oscuro" onclick="activarModoOscuro()">
+                    <input type="checkbox" id="boton-modo-oscuro" class="cabecera__boton-modo-oscuro">
                 </article>
                 <nav class="cabecera__navegador">
                     <input type="checkbox" id="casilla-menu" class="cabecera__casilla-menu">
@@ -34,12 +34,15 @@
             </header>
             <main class="cuerpo2">
                 <section class="cuerpo2__informacion-producto">
-                    <a href="assets/img/sonic_colors.jpg" ><img src="assets/img/sonic_colors.jpg" alt="Sonic Colors" class="cuerpo2__imagen-informacion-producto"></a>
+                    <a href="assets/img/sonic_colors.jpg" ><img src="assets/img/sonic_colors.jpg" alt="Sonic Colors" class="cuerpo2__imagen-informacion-producto" id="imagen-producto"></a>
                     <article class="cuerpo2__descripcion-producto">
-                        <h3 class="cuerpo2__nombre-producto">Sonic colors</h3>
+                        <h3 class="cuerpo2__nombre-producto" id="nombre-producto">Sonic colors</h3>
                         <p class="cuerpo2__descripcion">Sonic Colors es un videojuego de la saga Sonic the Hedgehog. Es el último videojuego para Wii sobre Sonic. Se anunció por primera vez el 26 de mayo de 2010 en un comunicado de prensa por Sega para Italia, e incluyó un trailer del videojuego. Se estrenó el 11 de noviembre de 2010 en Australia, 12 de noviembre de 2010 en Europa, 16 de noviembre 2010 en América del Norte, y 18 de noviembre de 2010 en Japón. Además, Dimps desarrolló una versión alternativa del videojuego para Nintendo DS y la estrenó casi al mismo tiempo que su contraparte de Wii.</p>
                         <p class="cuerpo2__descripcion">En Sonic Colors, Sonic y Tails investigan Egg Planet Park, donde el Dr. Eggman afirma al público que ha pasado página de su vida delictiva y ha creado un parque de diversiones para compensar sus acciones pasadas. Sin embargo, se revela que el parque es una tapadera para el villano, que ha arrastrado planetas de todo el universo hasta la Tierra y ha secuestrado a los nativos, una raza alienígena conocida como los Wisps. Con el poder de los Wisps, Sonic visita cada uno de los planetas para detener los planes del doctor de dominar el universo.</p>
-                        <p><a href="./pagina_de_productos.html" class="cuerpo2__boton-regreso">volver</a></p>
+                        <div class="cuerpo2__div">
+                            <p><a href="./pagina_de_productos.html" class="cuerpo2__boton-regreso">volver</a></p>
+                            <p><a class="cuerpo2__boton-regreso" id="añadir-al-carrito">Añadir al carrito</a></p>
+                        </div>
                     </article>
                 </section>
                 <h2 class="cuerpo2__titulo">OTROS PRODUCTOS</h2>
@@ -66,9 +69,11 @@
             </main>
             <footer class="pie">
                 <h4>Pagina web realizada por Cesar Gabriel Ucha Sousa (alias: ricitos2001)
-                    <img src="./assets/img/copyright.png" alt="Logo" id="pie__copyright" class="pie__copyright">
+                    <img src="./assets/img/copyright_black.png" alt="Logo" id="pie__copyright" class="pie__copyright">
                 </h4>
             </footer>
         </body>
         <script src="js/index.js"></script>
-    </html>
+        <script src="js/modo_oscuro.js"></script>
+        <script src="js/agregacion_de_productos.js"></script>
+</html>
