--- a/sonic_frontiers.html
+++ b/sonic_frontiers.html
@@ -14,7 +14,7 @@
                     <img src="assets/img/ring.gif" alt="Ring" class="cabecera__logo">
                     <h1>Web-Sonic.com</h1>
                     <label for="boton-modo-oscuro" class="cabecera__modo-oscuro">Modo oscuro</label>
-                    <input type="checkbox" id="boton-modo-oscuro" class="cabecera__boton-modo-oscuro" onclick="activarModoOscuro()">
+                    <input type="checkbox" id="boton-modo-oscuro" class="cabecera__boton-modo-oscuro">
                 </article>
                 <nav class="cabecera__navegador">
                     <input type="checkbox" id="casilla-menu" class="cabecera__casilla-menu">
@@ -34,12 +34,15 @@
             </header>
             <main class="cuerpo2">
                 <section class="cuerpo2__informacion-producto">
-                    <a href="assets/img/sonic_frontiers.jpg"><img src="assets/img/sonic_frontiers.jpg" alt="Sonic Frontiers" class="cuerpo2__imagen-informacion-producto"></a>
+                    <a href="assets/img/sonic_frontiers.jpg"><img src="assets/img/sonic_frontiers.jpg" alt="Sonic Frontiers" class="cuerpo2__imagen-informacion-producto" id="imagen-producto"></a>
                     <article class="cuerpo2__descripcion-producto">
-                        <h3 class="cuerpo2__nombre-producto">Sonic frontiers</h3>
+                        <h3 class="cuerpo2__nombre-producto" id="nombre-producto">Sonic frontiers</h3>
                         <p class="cuerpo2__descripcion">Sonic Frontiers es un juego de la serie Sonic the Hedgehog que se lanzó el 8 de noviembre de 2022 en celebración del 30 aniversario de la franquicia. El juego fue desarrollado por Sonic Team y publicado por Sega. Está disponible para PlayStation 5, PlayStation 4, Xbox Series X y Series S, Xbox One, Nintendo Switch y PC.</p>
                         <p class="cuerpo2__descripcion">El juego marca la primera experiencia de juego inspirada en zonas abiertas en la serie Sonic, donde los jugadores podrán explorar paisajes exuberantes y expansivos utilizando la velocidad y las habilidades características de Sonic. La trama en sí ha sido escrita por Ian Flynn, el guionista principal de varios de los spin-offs de la serie Sonic.</p>
-                        <p><a href="./pagina_de_productos.html" class="cuerpo2__boton-regreso">volver</a></p>
+                        <div class="cuerpo2__div">
+                            <p><a href="./pagina_de_productos.html" class="cuerpo2__boton-regreso">volver</a></p>
+                            <p><a class="cuerpo2__boton-regreso" id="añadir-al-carrito">Añadir al carrito</a></p>
+                        </div>
                     </article>
                 </section>
                 <h2 class="cuerpo2__titulo">OTROS PRODUCTOS</h2>
@@ -66,9 +69,11 @@
             </main>
             <footer class="pie">
                 <h4>Pagina web realizada por Cesar Gabriel Ucha Sousa (alias: ricitos2001)
-                    <img src="./assets/img/copyright.png" alt="Logo" id="pie__copyright" class="pie__copyright">
+                    <img src="./assets/img/copyright_black.png" alt="Logo" id="pie__copyright" class="pie__copyright">
                 </h4>
             </footer>
         </body>
         <script src="js/index.js"></script>
-    </html>
+        <script src="js/modo_oscuro.js"></script>
+        <script src="js/agregacion_de_productos.js"></script>
+</html>
